<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_games">

    <keep_state_fragment
        android:id="@+id/navigation_browser"
        android:name="com.gamecenter.app.features.ModuleShellFragment"
        android:label="@string/nav_browser">
        <argument
            android:name="module_id"
            app:argType="string"
            android:defaultValue="browser" />
    </keep_state_fragment>

    <keep_state_fragment
        android:id="@+id/navigation_games"
        android:name="com.gamecenter.app.GamesFragment"
        android:label="@string/nav_games" />

    <keep_state_fragment
        android:id="@+id/navigation_tools"
        android:name="com.gamecenter.app.features.ModuleShellFragment"
        android:label="@string/nav_tools">
        <argument
            android:name="module_id"
            app:argType="string"
            android:defaultValue="tools" />
    </keep_state_fragment>

    <keep_state_fragment
        android:id="@+id/navigation_ai"
        android:name="com.gamecenter.app.features.ModuleShellFragment"
        android:label="@string/nav_ai">
        <argument
            android:name="module_id"
            app:argType="string"
            android:defaultValue="ai" />
    </keep_state_fragment>

    <keep_state_fragment
        android:id="@+id/navigation_vpn"
        android:name="com.gamecenter.app.features.ModuleShellFragment"
        android:label="@string/nav_vpn">
        <argument
            android:name="module_id"
            app:argType="string"
            android:defaultValue="vpn" />
    </keep_state_fragment>

    <keep_state_fragment
        android:id="@+id/navigation_wrongbook"
        android:name="com.gamecenter.app.features.ModuleShellFragment"
        android:label="@string/nav_wrongbook">
        <argument
            android:name="module_id"
            app:argType="string"
            android:defaultValue="wrongbook" />
    </keep_state_fragment>

</navigation>
