<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sound_start"
        style="@style/Widget.GameMatrix.Button.Tonal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/gm_spacing_2"
        android:text="@string/sound_btn_start" />

    <ProgressBar
        android:id="@+id/pb_sound_level"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gm_spacing_3"
        android:max="100" />

    <TextView
        android:id="@+id/tv_sound_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gm_spacing_2"
        android:text="@string/sound_current_format"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sound_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gm_spacing_1"
        android:text="@string/sound_max_format"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sound_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gm_spacing_1"
        android:text="@string/sound_avg_format"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_sound_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gm_spacing_2"
        android:text="@string/sound_status_ready"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="12sp" />

</LinearLayout>
